--- a/package.json
+++ b/package.json
@@ -20,7 +20,6 @@
     "migration:revert": "env-cmd -f .env ts-node ./node_modules/.bin/typeorm migration:revert"
   },
   "dependencies": {
-    "joi": "^17.5.0",
     "@nestjs/common": "^8.2.3",
     "@nestjs/core": "^8.2.3",
     "@nestjs/platform-express": "^8.2.3",
@@ -29,9 +28,11 @@
     "@nestjs/typeorm": "^8.0.2",
     "express": "^4.17.1",
     "helmet": "^4.6.0",
+    "joi": "^17.5.0",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
     "mysql": "^2.18.1",
+    "node-binance-api": "^0.13.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.4.0",
     "swagger-ui-express": "^4.2.0",
